#pragma once

#include <string>
#include <unordered_map>

class Calculator
{
public:
	enum class Operation
	{
		None,
		Add,
		Sub,
		Mul,
		Div
	};

	struct Function
	{
		std::string left;
		std::string right;
		Operation operation = Operation::None;
		bool isBinary = false;
	};

	bool DeclareVariable(const std::string& id);
	bool AssignVariable(const std::string& id, double value);
	bool AssignVariableFromId(const std::string& id1, const std::string& id2);
	bool DefineFunction(const std::string& id, const std::string& operand);
	bool DefineFunction(const std::string& id, const Function& function);

	double GetValue(const std::string& id);
	[[nodiscard]] const std::unordered_map<std::string, double>& GetAllVariables() const;
	std::unordered_map<std::string, double> GetAllFunctions();
	[[nodiscard]] bool Exists(const std::string& id) const;

private:
	std::unordered_map<std::string, double> m_variables;
	std::unordered_map<std::string, Function> m_functions;
	std::unordered_map<std::string, double> m_cache;

	void ClearCache();
	double GetCalculatedFunctionValue(const std::string& rootId);
	void FillEvaluationCache(const std::string& rootId);
	double ExecuteOperation(const Function& function);
	static bool IsValidVariable(const std::string& id);
	bool IsOperandValid(const std::string& operand) const;
	double GetValueOrNumber(const std::string& idOrNumber);
};